# C-Game-SFML-Prototype

./: CMakeLists.txt  README.md  compilar.bat
include/: Game.h
src/: Game.cpp
